# greg-calc

./: .gitignore  Cargo.toml  greg-calc-e095a1748161e405.js  greg-calc-e095a1748161e405_bg.wasm  index.html  recipes.json
.github/workflows/: pages.yml
assets/: manifest.json  sw.js
src/: app.rs  config.rs  machine.rs  main.rs  math.rs  model.rs  nullspace.rs  processing.rs  recipe.rs  ui.rs
src/math/: nullspace.rs
src/model/: machine.rs  processing_chain.rs  recipe.rs
src/processing/: ui.rs
src/ui/: app.rs  processing_chain_table.rs  tabs.rs
